--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Biblical Studies</string>
+    <string name="king_of_kings">King of Kings</string>
 </resources>
